--- a/style.css
+++ b/style.css
@@ -71,6 +71,13 @@ select {
     justify-content: space-between;
 }
 
+.toggle{
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    /* justify-content: space-between; */
+}
+
 .button {
     /* height: 20px;
     width: 60px; */
@@ -87,6 +94,10 @@ select {
 .grow:hover { 
     transform: scale(1.05); 
     }
+
+.weather {
+    padding: 24px;
+}
 
 input:focus{
     border: none;
@@ -109,3 +120,69 @@ input:focus{
 .successful{
     color: rgb(0, 207, 211);
 }
+
+/* The switch - the box around the slider */
+.switch {
+    justify-self: start;
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+    /* background-color: aquamarine; */
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+    /* box-shadow: 0 0 1px aquamarine; */
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
